k8s/apps/karakeep/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: karakeep-service
  namespace: karakeep
spec:
  selector:
    app: karakeep
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
